Changed to using a docbook xml file created my manually running aasciidoctor (while waiting for upstream changes)